--- a/static/template/admin.html
+++ b/static/template/admin.html
@@ -1,12 +1,14 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/static/css/bulma.min.css"> 
-        <link rel="stylesheet" href="/static/css/all.css"> 
+        <link rel="stylesheet" href="/static/css/bulma.min.css">
         <style>
             body{
-                padding-top: 15%;
+                padding-top: 5%;
                 height: 100%;
-                color: whitesmoke;
+                color: white!important;
+            }
+            .title{
+                color:white!important;
             }
             .label{
                 color: whitesmoke!important;
@@ -17,47 +19,48 @@
             }
         </style>
     </head>
-    <body>
-        <h2 style="text-align: center;"> 当前用户:<span>{{.Account}}</span></h2>
-        <div style="width: 1000px;height:auto; background-color: antiquewhite; margin: 20px auto;">
-            <ul>
-                <li><a href="javascript:void(0)" onclick="logout()">注销</a></li>
-            </ul>
-            <hr>
-            <h3>第三方应用列表:</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th>应用名称</th>
-                        <th>ClientID</th>
-                        <th>PrivateKey</th>
-                        <th>回调地址</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{range .AppList}}
+    <body class="bg">
+        <div class="columns">
+            <div class="column"></div>
+            <div class="column is-three-quarters">
+                <h2 style="text-align: center;"  class="title is-2"> 当前用户:{{.Account}}</h2>
+                <a class="button is-warning" href="javascript:void(0)" onclick="logout()">注销</a>
+                <h3 class="title is-3">第三方应用列表:</h3>
+
+                <table class="table is-striped is-hoverable  is-fullwidth">
+                    <thead>
                         <tr>
-                            <td>{{.Name}}</td>
-                            <td>{{.ClientID}}</td>
-                            <td>{{.PrivateKey}}</td>
-                            <td>{{.Callback}}</td>
-                            <td><button onclick="deleteApp({{.ID}})">删除</button></td>
+                            <th>应用名称</th>
+                            <th>ClientID</th>
+                            <th>PrivateKey</th>
+                            <th>回调地址</th>
+                            <th>操作</th>
                         </tr>
+                    </thead>
+                    <tbody>
+                        {{range .AppList}}
+                            <tr>
+                                <td>{{.Name}}</td>
+                                <td>{{.ClientID}}</td>
+                                <td>{{.PrivateKey}}</td>
+                                <td>{{.Callback}}</td>
+                                <td><button onclick="deleteApp({{.ID}})">删除</button></td>
+                            </tr>
+                        {{end}}
+                    </tbody>
+                </table>
+                <hr>
+                <h3 class="title is-3">用户列表:</h3>
+                <div class="buttons">
+                    {{range .UserList}}
+                        <span class="button">{{.Name}}</span>
                     {{end}}
-                </tbody>
-            </table>
-            <h3>用户列表:</h3>
-            <ul>
-                {{range .UserList}}
-                    <li>{{.Name}}</li>
-                {{end}}
-            </ul>
+                </div>
+            </div>
+            <div class="column"></div>
         </div>
     </body>
     <script>
-
-
         function logout(){
             fetch("/user/logout",{
                 method: "DELETE"
