--- a/static/template/user.html
+++ b/static/template/user.html
@@ -20,8 +20,8 @@
         <div class="columns">
             <div class="column"></div>
             <div class="column is-one-fifth">
-                <h2 style="text-align: center;"> 当前用户:{{.Account}}</h2>
-                <a href="javascript:void(0)" onclick="logout()">注销</a>
+                <h2 style="text-align: center;"  class="title is-2"> 当前用户:{{.Account}}</h2>
+                <a class="button is-warning" href="javascript:void(0)" onclick="logout()">注销</a>
             </div>
             <div class="column"></div>
         </div>
