--- a/static/template/admin.html
+++ b/static/template/admin.html
@@ -18,6 +18,7 @@
                 background-repeat: repeat-x!important;
             }
         </style>
+         <title>OpenAuth管理</title>
     </head>
     <body class="bg">
         <div class="columns">
