--- a/static/template/confirm.html
+++ b/static/template/confirm.html
@@ -11,6 +11,7 @@
                 background-repeat: repeat-x!important;
             }
         </style>
+         <title>OpenAuth认证</title>
     </header>
     <body>
         <div class="modal is-active">
