--- a/static/template/register.html
+++ b/static/template/register.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>OpenAuth用户注册</title>
         <link rel="stylesheet" href="/static/css/bulma.min.css">
         <style>
             body{
