--- a/static/template/user.html
+++ b/static/template/user.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>OpenAuth 用户信息</title>
         <link rel="stylesheet" href="/static/css/bulma.min.css"> 
         <style>
             body{
