--- a/static/template/login.html
+++ b/static/template/login.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>OpenAuth登陆</title>
         <link rel="stylesheet" href="/static/css/bulma.min.css">
         <style>
             body{
