--- a/static/template/user.html
+++ b/static/template/user.html
@@ -4,9 +4,12 @@
         <link rel="stylesheet" href="/static/css/bulma.min.css"> 
         <style>
             body{
-                padding-top: 15%;
+                padding-top: 5%;
                 height: 100%;
-                color: whitesmoke;
+                color: white!important;
+            }
+            .title{
+                color:white!important;
             }
             .label{
                 color: whitesmoke!important;
@@ -20,9 +23,14 @@
     <body class="bg">
         <div class="columns">
             <div class="column"></div>
-            <div class="column is-one-fifth">
+            <div class="column is-three-quarters">
                 <h2 style="text-align: center;"  class="title is-2"> 当前用户:{{.Account}}</h2>
-                <a class="button is-warning" href="javascript:void(0)" onclick="logout()">注销</a>
+                <div class="buttons">
+                    <a class="button is-warning" href="javascript:void(0)" onclick="logout()">注销</a>
+                    {{if .OpenAppRegister}}
+                    <a class="button is-info" href="/app/register" target="_blank">接入开放用户系统</a>
+                    {{end}}
+                </div>
             </div>
             <div class="column"></div>
         </div>
