--- a/static/template/admin.html
+++ b/static/template/admin.html
@@ -17,6 +17,9 @@
                 background-image: url("/static/images/bg.png") !important;
                 background-repeat: repeat-x!important;
             }
+            .table td, .table th{
+                vertical-align: middle !important;
+            }
         </style>
          <title>OpenAuth管理</title>
     </head>
@@ -52,7 +55,12 @@
                                 <td>{{.Appliction.ClientID}}</td>
                                 <td>{{.Appliction.PrivateKey}}</td>
                                 <td>{{.Appliction.Callback}}</td>
-                                <td><button onclick="deleteApp({{.Appliction.ID}})">删除</button></td>
+                                <td>
+                                    <div class="buttons">
+                                        <button class="button is-small" onclick="deleteApp({{.Appliction.ID}})">删除</button>
+                                        <a class="button is-small" href="/app/{{.Appliction.ID}}">编辑</a>
+                                    </div>
+                                </td>
                             </tr>
                         {{end}}
                     </tbody>
