--- a/static/template/user.html
+++ b/static/template/user.html
@@ -30,13 +30,14 @@
                 <h2 style="text-align: center;"  class="title is-2"> 当前用户:{{.Account}}</h2>
                 <div class="buttons">
                     <a class="button is-warning" href="javascript:void(0)" onclick="logout()">注销</a>
+                    <a class="button is-success" href="/user/password" >修改密码</a>
                     {{if .OpenAppRegister}}
-                    <a class="button is-info" href="/app/register" target="_blank">接入开放用户系统</a>
+                    <a class="button is-info" href="/app/register" target="_blank">申请接入开放用户系统</a>
                     {{end}}
                 </div>
                 {{if .OpenAppRegister}}
                 <hr>
-                <h3 class="title is-3">已申请接入的应用列表:</h3>
+                <h3 class="title is-3">已申请接入开放用户系统的应用列表:</h3>
                 <table class="table is-striped is-hoverable is-narrow is-fullwidth">
                     <thead>
                         <tr>
