add app user manager

--- a/static/template/admin.html
+++ b/static/template/admin.html
@@ -60,7 +60,7 @@
                                     <div class="buttons">
                                         <button class="button is-small" onclick="deleteApp({{.Appliction.ID}}, {{.Appliction.Name}})">删除</button>
                                         <a class="button is-small" href="/app/{{.Appliction.ID}}">编辑</a>
-                                        <a class="button is-small" href="/app/{{.Appliction.ID}}/user_manger">用户管理</a>
+                                        <a class="button is-small" href="/app/{{.Appliction.ID}}/user_manager">用户管理</a>
                                     </div>
                                 </td>
                             </tr>
