--- a/static/template/user.html
+++ b/static/template/user.html
@@ -59,6 +59,7 @@
                                     <div class="buttons">
                                         <button class="button is-small" onclick="deleteApp({{.Appliction.ID}})">删除</button>
                                         <a class="button is-small" href="/app/{{.Appliction.ID}}">编辑</a>
+                                        <a class="button is-small" href="/app/{{.Appliction.ID}}/user_manager">用户管理</a>
                                     </div>   
                                 </td>
                             </tr>
